# Hempy

./: .gitignore  LICENSE.txt  README.md  Untitled.ipynb  project.ipynb  projet.ipynb  setup.py  test_2.ipynb  test_3.ipynb  test_4.ipynb
.ipynb_checkpoints/: LICENSE-checkpoint.txt  README-checkpoint.md  project-checkpoint.ipynb  projet-checkpoint.ipynb  projet_Arthur-checkpoint.ipynb  projet_sarah-checkpoint.ipynb  setup-checkpoint.py  test_2-checkpoint.ipynb  test_3-checkpoint.ipynb
.virtual_documents/: project.ipynb
.virtual_documents/notebooks/: project_report.ipynb
api/: index.rst
api/.ipynb_checkpoints/: conf-checkpoint.py
copier_template/: .copier-answers.yml  LICENSE  README.md  pyproject.toml  tox.ini
copier_template/docs/source/: conf.py
copier_template/src/hempy/: __init__.py
copier_template/tests/: test_example_module.py
hempy/: molecule_properties.py  molecule_visualization.py
hempy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
hempy/.ipynb_checkpoints/: __init__-checkpoint.py  molecule_properties-checkpoint.py  molecule_visualization-checkpoint.py  survey_results-checkpoint.py  synthesis_reactions-checkpoint.py
notebooks/: project_report.ipynb
notebooks/.ipynb_checkpoints/: project_report-checkpoint.ipynb
src/hempy/: molecules_properties.py  molecules_visualization.py  synthesis_reactions.py
tests/: test_cas_number.py  test_draw_2D.py  test_draw_3D.py  test_fetch_cas.py  test_fetch_properties.py  test_properties.py  test_similarity.py  test_smiles_code.py  test_survey.py  test_synthesis.py  testing.py  untitled.txt
tests/.ipynb_checkpoints/: test_properties-checkpoint.py  (+4 more)
